<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.ui.activities.GoldenTempleActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:shapeAppearance="@style/Widget.MaterialComponents.ShapeableImageView.Corners"
                app:srcCompat="@drawable/the_golden_temple_of_amritsar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80020000">

                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/adapterflipper_fav"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_baseline_favorite_24"
                        app:tint="@color/pink" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/poppins_extrabold"
                    android:gravity="center_vertical"
                    android:text="@string/the_golden_temple"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/blue_gradient"
            android:elevation="20dp"
            android:fontFamily="@font/poppins_bold"
            android:outlineAmbientShadowColor="#1E88E5"
            android:outlineSpotShadowColor="#1E88E5"
            android:text="@string/see_location_in_google_maps"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView5" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/rating"
            android:textColor="#43A047"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/trip_duration"
            android:textColor="#E53935"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toEndOf="@id/textView9"
            app:layout_constraintTop_toBottomOf="@id/button" />

        <RatingBar
            android:id="@+id/rating_indiagate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:progressTint="#FFB300"
            android:rating="4.5"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:secondaryProgressTint="#888888"
            android:transformPivotX="0dp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/tripDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/_7_days"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@id/textView10" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:background="#4A4A4A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="#4A4A4A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/about_the_monument"
            android:textColor="@color/blue_gradient_dark"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="@string/about_golden_temple"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>