<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_gradient"
    android:paddingBottom="100dp"
    tools:context=".activities.ui.ui.activities.BookingConfimedActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/confirm"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="360dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/confirm"
            app:shapeAppearanceOverlay="@style/ShapeableImageView" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/thankyou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_extrabold"
        android:gravity="center"
        android:text="Thank You \nFor Booking"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/confirm_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thankyou" />

    <Button
        android:id="@+id/continue_travel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/continue_travel"
        android:textColor="@color/blue_gradient"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <Button
        android:id="@+id/view_summary"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/view_summary"
        android:textColor="@color/blue_gradient"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_travel" />

</androidx.constraintlayout.widget.ConstraintLayout>